# autonomous_driving_vehicles_project

./: README.md
classifier/: dataParser.py  feature_detection.py  feature_detection_sift.py  mobilenetv2_classifier.py  pyproject.toml  transform.py
classifier/element_new/: classes.txt
classifier/records/: record_classify.txt
heatmap/: gradient.py  metadata.py  parser.py  pyproject.toml  requirements.txt  track.py  transform.py  try.py
