[tool.poetry]
name = "classifier"
version = "0.1.0"
description = "classifier for element type"
authors = ["batbat99 <hbatayneh@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
opencv-python = "^4.5.4"
tensorflow = "^2.7.0"
pandas = "^1.3.5"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
