[tool.poetry]
name = "heatmap"
version = "0.1.0"
description = "a package to generate a heatmap based on the element type"
authors = ["batbat99 <hbatayneh@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = "^4.5.4"
colour = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
